Wed Apr 11 12:33:37 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_sys_stat.inl:

          Added a static_cast to avoid a warning from gcc.

        * ace/SOCK_Dgram.cpp:

          Fixed my RTEMS detection for checking to see if iov_len is less
          than zero.

Wed Apr 11 11:37:42 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Reactor_Notify_Test.cpp:
        * tests/Time_Value_Test.cpp:

          Added static_cast and changed types to time_t to avoid warnings
          from gcc.

Wed Apr 11 10:57:07 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Improved gcc 4 visibility support, thanks to Max Khon
          <mkhon at swsoft dot com> for delivering the patch. This fixes
          bugzilla 2881

        * ace/Barrier.h:
          Doxygen improvements

        * ace/OS_NS_Thread.cpp:
          Use prefix increment/decrement

Tue Apr 10 20:27:07 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * docs/Download.html: Updated the download page to clarify the
          status of autoconf.  Thanks to Eric Hughes <eh at narthex dot us>
          for clarifying this.

Tue Apr 10 17:20:46 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * ace/CORBA_macros.h:  Reverted the change to exclude
          ACE_PRINT_EXCEPTION from being affected by
          ACE_LACKS_DEPRECATED_MACROS.

Sat Apr  7 12:17:45 UTC 2007 Phil Mesnier <mesnier_p@ociweb.com>

        * ace/Asynch_IO.cpp: fixed spelling error in include.

Fri Apr  6 19:48:20 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.inl (recursive_mutex_cond_unlock): Corrected for
          Windows Mobile 5, where the CRITICAL_SECTION LockCount member was
          changed from 0-base to 1-base.

Fri Apr  6 14:27:20 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_IO.h: Improved comments for ACE_Asynch_Read_Stream.
