@@ -413,10 +413,21 @@
 // ACE_HAS_EXCEPTIONS is not the same as ACE_NEW_THROWS_EXCEPTIONS.
 #if defined(ACE_NEW_THROWS_EXCEPTIONS)
 
+# if defined (ACE_HAS_NEW_NOTHROW)
+
+#    define ACE_NEW_THROW_EX(POINTER,CONSTRUCTOR,EXCEPTION) \
+      do { POINTER = new (ACE_nothrow) CONSTRUCTOR; \
+        if (POINTER == 0) { errno = ENOMEM; throw EXCEPTION; } \
+      } while (0)
+
+#  else
+
 #   define ACE_NEW_THROW_EX(POINTER,CONSTRUCTOR,EXCEPTION) \
      do { try { POINTER = new CONSTRUCTOR; } \
        catch (ACE_bad_alloc) { ACE_del_bad_alloc errno = ENOMEM; throw EXCEPTION; } \
      } while (0)
+
+#  endif /* ACE_HAS_NEW_NOTHROW */
 
 #else /* ! ACE_NEW_THROWS_EXCEPTIONS */
 
